--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,27 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Operator</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only>
+        <ion-icon name="search"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <ion-list>
+    <div style="text-align: right">
+      <button ion-button clear icon-only><ion-icon name="options"></ion-icon></button>
+    </div>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+    <button ion-item *ngFor="let bot of bots" (click)="pushBotDetail()">
+      <ion-icon name="contact" item-start></ion-icon>
+      <h2>{{bot.username}}</h2>
+      <p>{{bot.text}}</p>
+    </button>
+  </ion-list>
 </ion-content>
