Add FAQ and Setting pages

--- a/src/pages/bot-detail/bot-detail.html
+++ b/src/pages/bot-detail/bot-detail.html
@@ -10,7 +10,7 @@
     <ion-row align-items-center class="coverrow">
       <ion-col style="text-align:center">
         <div><img src="assets/images/usericon.jpg" style="width:40%;margin:16px" /></div>
-        <p style="color: white;text-shadow: 0 0 10px #333;">最近はスプラトゥーン2にものすごく興味があります。<br />でもなかなかNintendo Switchが売っていません。</p>
+        <p style="font-weight: bold;color: white;text-shadow: 0 0 10px #333;">最近はスプラトゥーン2にものすごく興味があります。<br />でもなかなかNintendo Switchが売っていません。</p>
       </ion-col>
     </ion-row>
   </ion-grid>
