--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,7 +16,7 @@
   <ion-list>
     <ion-grid>
       <ion-row align-items-center>
-        <ion-col style="font-size: medium">
+        <ion-col>
           Assign: {{assign}}
         </ion-col>
         <ion-col style="text-align: right">
